Add DB script and add edit and delete function

--- a/RazorPageDemoApp/appsettings.json
+++ b/RazorPageDemoApp/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-08G88LI\\SQLEXPRESS;Database=RazorPagesDemo;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "AllowedHosts": "*"
 }
